--- a/public/index.html
+++ b/public/index.html
@@ -61,6 +61,7 @@
 						<li><a href="#education">Education</a></li>
 						<li><a href="#skills">Skills</a></li>
 						<li class="bold"><a href="https://blog.georgejose.com">Blog</a></li>
+						<li class="bold"><a href="http://georgejose.com:8080">CI</a></li>
 						<li class="bold"><a href="#contact">Contact</a></li>
 
 						<!-- <li><a href="index.html">Back</a></li> -->
