Updated skills summary

--- a/public/index.html
+++ b/public/index.html
@@ -529,14 +529,13 @@
 					<div class="col-md-8 col-sm-12 resume-item ">
 						<h4></h4>
 						<p><ul>
-							<li>Excellent project management, time management, leadership and communication skills developed through leading and working on projects in school and on co-op placements
+							<li>Solid knowledge of object oriented, functional &amp; reactive programming paradigms
 							</li>
-							<li>Exceptional analytical and problem solving skills developed through working on several individual and group projects
+							<li>Extensive experience with JavaScript (ES6+) &amp; JS libraries / frameworks - React, React Native, Redux, Node, Express
 							</li>
-							<li>Adaptable and always eager to learn; Ability to work under minimal supervision
+							<li>Experience with Python, Java, C++, Swift
 							</li>
-							<li>Strong team player; highly motivated and hardworking
-
+							<li>Experience leading teams, solid grasp of architecture, infrastructure, devops (Docker, Concourse, Jenkins, *nix), RESTful API design, agile software delivery
 						</ul></p>
 						<hr class="hidden-xs">
 					</div>
