--- a/public/index.html
+++ b/public/index.html
@@ -179,7 +179,7 @@
 						<h4>Business Technology Analyst</h4>
 						<p>
 							<ul>
-								<strong class="subtitle">Sonnet Insurance</strong>
+								<strong class="subtitle"><a href="https://www.sonnet.ca/">Sonnet Insurance</a></strong>
 								<li>Solution Architect on a large tech transformation project</li>
 								<strong class="subtitle"><a href="https://vimeo.com/149159354">#ConnectedBank APIs</a></strong>
 								<li>Designed, developed &amp; deployed several APIs written in Node.js for an iOS banking app </li>
