Changed Hello to Hi

--- a/public/index.html
+++ b/public/index.html
@@ -84,7 +84,7 @@
 					<div class="col-md-12">
 
 						<div class="hello">
-							<h1>Hello, I'm George Jose</h1>
+							<h1>Hi, I'm George Jose</h1>
 							<h2 class="tagline"><p>Full stack tech consultant. <br>
 							Love all things Engineering, Tech and Web. <br>Mechatronics Engineer.</p></h2>
 						</div>
