--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Profile of George Jose">
+	<meta name="description" content="George Jose's personal website &amp; resume">
 	<meta name="author" content="George Jose">
+	<meta name="keywords" content="george jose,george,jose,georgejose,gejose,gjose,resume,portfolio">
 
 	<title>George Jose</title>
 
