--- a/public/index.html
+++ b/public/index.html
@@ -345,10 +345,10 @@
 					</div>
 
 					<div class="col-md-6 col-md-offset-3 col-sm-8 resume-item ">
-						<h4><a href="https://georgejose.com/projects/livetransit">Where's my TTC?</a>&nbsp;<a href="https://github.com/G2Jose/livetransit"><i class="fa fa-github"></i></a></h4>
+						<h4><a href="https://georgejose.com/projects/livetransit">Where's my TTC?</a>&nbsp;<a href="https://github.com/G2Jose/wheres-my-ttc"><i class="fa fa-github"></i></a></h4>
 						<p><ul>
 							<li>Built live map showing real-time locations of Toronto streetcars &amp; buses</li>
-							<li><strong>Technologies used: </strong>jQuery, CSS, Node.js, Express.js, Google Maps JavaScript API</li>
+							<li><strong>Technologies used: </strong>React, RxJS, Nextbus API, Redis, React-Map-Gl</li>
 						</ul></p>
 						<hr class="hidden-xs">
 					</div>
