Added link to react-map-gl

--- a/public/index.html
+++ b/public/index.html
@@ -348,7 +348,7 @@
 						<h4><a href="https://georgejose.com/projects/livetransit">Where's my TTC?</a>&nbsp;<a href="https://github.com/G2Jose/wheres-my-ttc"><i class="fa fa-github"></i></a></h4>
 						<p><ul>
 							<li>Built live map showing real-time locations of Toronto streetcars &amp; buses</li>
-							<li><strong>Technologies used: </strong>React, RxJS, Nextbus API, Redis, React-Map-Gl</li>
+							<li><strong>Technologies used: </strong>React, RxJS, <a href="https://github.com/uber/react-map-gl">React-Map-Gl</a>, Nextbus API, Redis</li>
 						</ul></p>
 						<hr class="hidden-xs">
 					</div>
