--- a/public/index.html
+++ b/public/index.html
@@ -315,6 +315,21 @@
 					</div>
 
 					<div class="col-md-6 col-md-offset-3 col-sm-8 resume-item ">
+						<h4><a href="https://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=1220272464&mt=8">HackerNews App</a>&nbsp;<a href="https://github.com/G2Jose/ReactNative-HackerNews"><i class="fa fa-github"></i></a></h4>
+						<p><ul>
+							<li>Designed and built an iOS HackerNews client using React Native</li>
+							<li><strong>Technologies used: </strong>JavaScript, React Native, MobX</li>
+						</ul></p>
+						<hr class="hidden-xs">
+					</div>
+
+					<div class="col-md-3 col-sm-4 resume-place">
+						<h4 class="text-center"><i class="fa fa-cogs"></i>Personal Project</h4>
+						<div class="text-center"><i class="fa fa-calendar"></i>Apr 2017</div>
+						<hr class="visible-xs">
+					</div>
+
+					<div class="col-md-6 col-md-offset-3 col-sm-8 resume-item ">
 						<h4><a href="https://docs.google.com/spreadsheets/d/1jPiqOe-v7iKID9-t3XznvPXl-yRmYpaK9YHOy4_EYPI/edit?usp=sharing">Government of Ontario Data crawler</a>&nbsp;<a href="https://github.com/G2Jose/GovernmentOfOntarioDataCrawl"><i class="fa fa-github"></i></a></h4>
 						<p><ul>
 							<li>Built script in python to crawl publicly  available data from <a href="http://www.infogo.gov.on.ca/infogo/searchDirectory.do?actionType=changeLocale&locale=en">Government of Ontario</a></li>
