Updated BTA experience

--- a/public/index.html
+++ b/public/index.html
@@ -184,8 +184,8 @@
 								<li>Solution Architect on a large tech transformation project</li>
 								<strong class="subtitle"><a href="https://vimeo.com/149159354">#ConnectedBank APIs</a></strong>
 								<li>Designed, developed &amp; deployed several APIs written in Node.js for an iOS banking app </li>
-								<strong class="subtitle">MEAN PoC</strong>
-								<li>Designed and built a Proof of Concept full stack web application using MongoDB, Express, Angular, Node.js to serve as sales demo</li>
+								<strong class="subtitle">MEAN Banking App</strong>
+								<li>Designed and built a Proof of Concept full stack banking application using MongoDB, Express, Angular, Node.js to serve as sales demo</li>
 								<strong class="subtitle"><a href="http://rubixbydeloitte.com">Rubix by Deloitte</a></strong>
 								<li>Explored applications of blockchain technology in the enterprise</li>
 								<li>Evaluated several open source blockchain technologies</li>
