--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 	<meta name="author" content="George Jose">
 	<meta name="keywords" content="george jose,george,jose,georgejose,gejose,gjose,resume,portfolio">
 
-	<title>George Jose</title>
+	<title>George Jose - Engineering, Web, Mechatronics</title>
 
 	<!-- CSS -->
 	<!-- Bootstrap core CSS -->
