Added link to Travis

--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
 						<li><a href="#education">Education</a></li>
 						<li><a href="#skills">Skills</a></li>
 						<li class="bold"><a href="https://blog.georgejose.com">Blog</a></li>
-						<li class="bold"><a href="http://ci.georgejose.com">CI</a></li>
+						<li class="bold"><a href="https://travis-ci.org/G2Jose/personal-website">CI</a></li>
 						<li class="bold"><a href="#contact">Contact</a></li>
 
 						<!-- <li><a href="index.html">Back</a></li> -->
