--- a/public/index.html
+++ b/public/index.html
@@ -86,7 +86,7 @@
 
 						<div class="hello">
 							<h1>Hi, I'm George Jose</h1>
-							<h2 class="tagline"><p>Full stack tech consultant. <br>
+							<h2 class="tagline"><p>Senior Consultant @ Deloitte. <br>
 							Love all things Engineering, Tech and Web. <br>Mechatronics Engineer.</p></h2>
 						</div>
 
@@ -150,6 +150,27 @@
 						<h3 id="work_experience">Work Experience</h3>
 					</div>
 					<div class="col-md-6 col-sm-8 resume-item ">
+						<h4>Senior Consultant</h4>
+							<p>
+								<ul>
+									<strong class="subtitle">Top 5 Canadian retailer</strong>
+									<li>(NDA)</li>
+								</ul>
+							</p>
+						
+						<hr class="hidden-xs">
+					</div>
+
+					<div class="col-md-3 col-sm-4 resume-place ">
+						<h4 class="text-center"><i class="fa fa-suitcase"></i>Deloitte Canada</h4>
+						<div class="text-center"><i class="fa fa-calendar"></i>August 2017 - Present</div>
+						<div class="text-center">
+							<img class="pic" src="assets/images/deloitte.png" alt="Deloitte Logo">
+						</div>
+						<hr class="visible-xs">
+					</div>
+
+					<div class="col-md-6 col-md-offset-3 col-sm-8 resume-item ">
 						<h4>Consultant</h4>
 						<p>
 							<ul>
@@ -165,11 +186,7 @@
 					</div>
 					<div class="col-md-3 col-sm-4 resume-place ">
 						<h4 class="text-center"><i class="fa fa-suitcase"></i>Deloitte Canada</h4>
-						<!-- <h5>Systems Integration Practice</h5> -->
-						<div class="text-center"><i class="fa fa-calendar"></i>July 2016 - Present</div>
-						<!-- <div class="text-center">
-							<img class="pic" src="assets/images/rubix-logo-navy.png">
-						</div> -->
+						<div class="text-center"><i class="fa fa-calendar"></i>July 2016 - July 2017</div>
 						<div class="text-center">
 							<img class="pic" src="assets/images/deloitte.png" alt="Deloitte Logo">
 						</div>
