Add drop experience

--- a/public/index.html
+++ b/public/index.html
@@ -73,9 +73,6 @@
 						<li>
 							<a href="#education">Education</a>
 						</li>
-						<li>
-							<a href="#skills">Skills</a>
-						</li>
 						<li class="bold">
 							<a href="https://blog.georgejose.com">Blog</a>
 						</li>
@@ -97,7 +94,7 @@
 						<div class="hello">
 							<h1>Hi, I'm George Jose</h1>
 							<h2 class="tagline">
-								<p>Senior Consultant @ Deloitte.
+								<p>Engineering Lead @ Drop Technologies.
 									<br> Love all things Engineering, Tech and Web.
 									<br>Mechatronics Engineer.</p>
 							</h2>
@@ -162,7 +159,43 @@
 					<div class="col-md-3 ">
 						<h3 id="work_experience">Work Experience</h3>
 					</div>
-					<div class="col-md-6 col-sm-8 resume-item ">
+					<div class="col-md-6 col-sm-8 resume-item">
+						<h4>Engineering Lead</h4>
+						<p>
+						</p>
+						<hr class="hidden-xs">
+					</div>
+					<div class="col-md-3 col-sm-4 resume-place ">
+						<h4 class="text-center">
+							<i class="fa fa-suitcase"></i>Drop Technologies</h4>
+						<div class="text-center">
+							<i class="fa fa-calendar"></i>January 2019 - Present</div>
+						<div class="text-center">
+							<img class="pic" src="assets/images/drop-logo.png" alt="Drop Technologies Logo">
+						</div>
+						<hr class="visible-xs">
+					</div>
+					<div class="col-md-6 col-sm-8 resume-item col-md-offset-3">
+						<h4>Engineer</h4>
+						<p>
+							<ul>
+								<li>
+									<i>Technologies used: </i>Javascript/Typescript, Ruby on Rails, Docker, Kubernetes</li>
+							</ul>
+						</p>
+						<hr class="hidden-xs">
+					</div>
+					<div class="col-md-3 col-sm-4 resume-place ">
+						<h4 class="text-center">
+							<i class="fa fa-suitcase"></i>Drop Technologies</h4>
+						<div class="text-center">
+							<i class="fa fa-calendar"></i>April 2018 - January 2019</div>
+						<div class="text-center">
+							<img class="pic" src="assets/images/drop-logo.png" alt="Drop Technologies Logo">
+						</div>
+						<hr class="visible-xs">
+					</div>
+					<div class="col-md-6 col-sm-8 resume-item col-md-offset-3">
 						<h4>Senior Consultant</h4>
 						<p>
 							<ul>
@@ -182,7 +215,7 @@
 						<h4 class="text-center">
 							<i class="fa fa-suitcase"></i>Deloitte Canada</h4>
 						<div class="text-center">
-							<i class="fa fa-calendar"></i>August 2017 - Present</div>
+							<i class="fa fa-calendar"></i>August 2017 - January 2018</div>
 						<div class="text-center">
 							<img class="pic" src="assets/images/deloitte.png" alt="Deloitte Logo">
 						</div>
@@ -621,65 +654,7 @@
 						<hr class="visible-xs">
 					</div>
 				</div>
-				<div class="row resume-items">
-					<div class="col-md-3 ">
-						<h3 id="skills">Technical Skills</h3>
-					</div>
-					<div class="col-md-8 col-sm-12 resume-item ">
-						<h4></h4>
-						<p>
-							<ul>
-								<li>
-									<strong>Programming languages:</strong> JavaScript (ES2015), Python, Java, C++, C, Swift, Matlab, Bash scripting
-								</li>
-								<li>
-									<strong>Frameworks/Libraries:</strong> React, Redux, Angular, Node, Express, MongoDB, RethinkDB, Socket.io
-								</li>
-								<li>Experience designing and developing apps (
-									<a href="https://play.google.com/store/apps/details?id=com.gb.ambience&hl=en">Android</a>,
-									<u>
-										<a href="https://github.com/willedflipper66/WatchStocks">Apple Watch</a>
-									</u>)
-								</li>
-								<li>Extensive experience with Arduino and Raspberry Pi
-								</li>
-								<li>Experience desinging &amp; developing a real time operating system</li>
-								<li>Excellent 3D CAD skills: experience with SolidWorks, Pro Engineer, NX, Google SketchUp, AutoCAD, Abaqus
-								</li>
-								<li>Hands-on experience in soldering, working with Multimeters, Function Generators, Oscilloscopes
-								</li>
-							</ul>
-						</p>
-						<hr class="hidden-xs">
-					</div>
-					<div class="col-md-3 col-sm-4 resume-place ">
-						<hr class="visible-xs">
-					</div>
-				</div>
-				<div class="row resume-items">
-					<div class="col-md-3 ">
-						<h3>Skills Summary</h3>
-					</div>
-					<div class="col-md-8 col-sm-12 resume-item ">
-						<h4></h4>
-						<p>
-							<ul>
-								<li>Solid knowledge of object oriented, functional &amp; reactive programming paradigms
-								</li>
-								<li>Extensive experience with JavaScript (ES6+) &amp; JS libraries / frameworks - React, React Native, Redux, Node, Express
-								</li>
-								<li>Experience with Python, Java, C++, Swift
-								</li>
-								<li>Experience leading teams, solid grasp of architecture, infrastructure, devops (Docker, Concourse, Jenkins, *nix),
-									RESTful API design, agile software delivery
-							</ul>
-						</p>
-						<hr class="hidden-xs">
-					</div>
-					<div class="col-md-3 col-sm-4 resume-place ">
-						<hr class="visible-xs">
-					</div>
-				</div>
+
 				<div class="col-md-3 ">
 
 				</div>
